hphp/hack/test/typecheck/is_expression/tconst3.php.exp
File "tconst3.php", line 7, characters 15-21:
Invalid "is" expression hint (Typing[4195])
File "tconst3.php", line 4, characters 23-23:
The "is" operator cannot be used with the abstract type constant T because it is not marked <<__Enforceable>>
